deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: bankapp-deployment
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: bankapp
  template:
    metadata:
      labels:
        app: bankapp
    spec:
      containers: 
      - name: bankapp-container
        image: vennelavattiprolu/bloodbank:appimage 
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "120Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
