statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bankapp-statefulset
spec:
  serviceName: "bankapp-service"
  replicas: 3
  selector:
    matchLabels:
      app: bankapp
  template:
    metadata:
      labels:
        app: bankapp
    spec:
      containers:
      - name: bankapp-container
        image: vennelavattiprolu/bloodbank:dbimage 
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: "100m"
            memory: "120Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        volumeMounts:
        - name: bankapp-persistent-storage
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata: 
      name: bankapp-persistent-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
