db-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bankapp-db-service
spec:
  clusterIP: None
  selector:
    app: dbbankapp
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
